--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
    
 <!-- JS below -->
 <script src="js/gulpfile.js"></script>
-<script src="js/main.js"></script>
+<script type="module" src="js/main.js"></script>
 
 <!-- Below are js files to add later -->
 <!-- <script src="js/videocontrols.js"></script>  -->
