--- a/index.html
+++ b/index.html
@@ -52,6 +52,17 @@
         <router-view id="move"></router-view>
     </transition>
 
+
+
+    <footer>
+        <ul id="socialMed">
+            <li><a href="#"><img src="images/facebook.svg" alt=""></a></li>
+            <li><a href="#"><img src="images/instagram.svg" alt=""></a></li>
+            <li><a href="#"><img src="images/twitter.svg" alt=""></a></li>
+            <li><a href="#"><img src="images/youtube.svg" alt=""></a></li>
+        </ul>
+        <p id="copyText">&copy; Ontario Tourism. All Rights Reserved.</p>
+    </footer>
 </main>
 
 
