logo spacing and sizing for responsive

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 <body>
     
 <main id="app">
-        <a href="includes/admin/admin_login.php">login</a>
-        <a href="includes/admin/sign-up.php">Sign Up!</a>
+        <!-- <a href="includes/admin/admin_login.php">login</a>
+        <a href="includes/admin/sign-up.php">Sign Up!</a> -->
 
     <router-link :to="{ path: '/promotions'}"><img id="logo" src="images/Ontario_Summer-01.svg" width="200px"></router-link>
 
