--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
 <!-- JS below -->
 <script src="js/gulpfile.js"></script>
 <script type="module" src="js/main.js"></script>
+<script src="js/mywaypoint.js"></script>
+<script src="js/waypoint.js"></script>
+<script src="js/noframework.waypoints.js"></script>
 
 <!-- Below are js files to add later -->
 <!-- <script src="js/videocontrols.js"></script>  -->
